@@ -494,38 +494,7 @@
                 <plugins>
 
 
-                 <!--   <plugin>
-                        <groupId>io.github.fvarrui</groupId>
-                        <artifactId>javapackager</artifactId>
-                        <version>1.7.6</version>
-                        <executions>
-                            <execution>
-                                <id>bundling-for-macos-arm64</id>
-                                <phase>package</phase>
-                                <goals>
-                                    <goal>package</goal>
-                                </goals>
-                                <configuration>
-                                    <platform>mac</platform>
-                                    <mainClass>xyz.hashdog.rdm.ui.Main</mainClass>
-                                    <bundleJre>true</bundleJre>
-                                    <createTarball>false</createTarball>
-                                    <generateInstaller>false</generateInstaller>
-                                    <jdkPath>${env.JAVA_HOME}</jdkPath>
-                                    <macConfig>
-                                        <icnsFile>src/main/resources/icon/redis256.icns</icnsFile>
-                                        <entitlements>src/main/resources/assets/entitlements.plist</entitlements>
-                                    </macConfig>
-                                    <vmArgs>
-                                        <arg>&#45;&#45;module-path</arg>
-                                        <arg>libs</arg>
-                                        <arg>&#45;&#45;add-modules</arg>
-                                        <arg>javafx.controls,javafx.fxml,javafx.graphics,javafx.media,javafx.swing,javafx.web,javafx.base</arg>
-                                    </vmArgs>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>-->
+
 
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
@@ -547,23 +516,57 @@
                                             <arg value="--no-header-files" />
                                             <arg value="--no-man-pages" />
                                         </exec>
-                                        <exec executable="jpackage">
-                                            <arg value="--type" />
-                                            <arg value="dmg" />
-                                            <arg value="--input"/>
-                                            <arg value="${project.build.directory}"/>
-                                            <arg value="--main-jar" />
-                                            <arg value="rdm-ui-${rdm.version}-jar-with-dependencies.jar" />
-                                            <arg value="--runtime-image" />
-                                            <arg value="${project.build.directory}/custom-jre" />
-                                            <arg value="--main-class" />
-                                            <arg value="xyz.hashdog.rdm.ui.App" />
-                                            <arg value="--name" />
-                                            <arg value="RedisDesktopManagerFX" />
-                                            <arg value="--dest" />
-                                            <arg value="${project.build.directory}" />
-                                        </exec>
+<!--                                        <exec executable="jpackage">-->
+<!--                                            <arg value="&#45;&#45;type" />-->
+<!--                                            <arg value="dmg" />-->
+<!--                                            <arg value="&#45;&#45;input"/>-->
+<!--                                            <arg value="${project.build.directory}"/>-->
+<!--                                            <arg value="&#45;&#45;main-jar" />-->
+<!--                                            <arg value="rdm-ui-${rdm.version}-jar-with-dependencies.jar" />-->
+<!--                                            <arg value="&#45;&#45;runtime-image" />-->
+<!--                                            <arg value="${project.build.directory}/custom-jre" />-->
+<!--                                            <arg value="&#45;&#45;main-class" />-->
+<!--                                            <arg value="xyz.hashdog.rdm.ui.App" />-->
+<!--                                            <arg value="&#45;&#45;name" />-->
+<!--                                            <arg value="RedisDesktopManagerFX" />-->
+<!--                                            <arg value="&#45;&#45;dest" />-->
+<!--                                            <arg value="${project.build.directory}" />-->
+<!--                                        </exec>-->
                                     </target>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+
+                    <plugin>
+                        <groupId>io.github.fvarrui</groupId>
+                        <artifactId>javapackager</artifactId>
+                        <version>1.7.6</version>
+                        <executions>
+                            <execution>
+                                <id>bundling-for-macos-arm64</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>package</goal>
+                                </goals>
+                                <configuration>
+                                    <platform>mac</platform>
+                                    <mainClass>xyz.hashdog.rdm.ui.Main</mainClass>
+                                    <bundleJre>true</bundleJre>
+                                    <createTarball>false</createTarball>
+                                    <generateInstaller>false</generateInstaller>
+<!--                                    <jdkPath>${env.JAVA_HOME}</jdkPath>-->
+                                    <jdkPath>${project.build.directory}/custom-jre</jdkPath>
+                                    <macConfig>
+                                        <icnsFile>src/main/resources/icon/redis256.icns</icnsFile>
+                                        <entitlements>src/main/resources/assets/entitlements.plist</entitlements>
+                                    </macConfig>
+                                    <vmArgs>
+                                        <arg>--module-path</arg>
+                                        <arg>libs</arg>
+                                        <arg>--add-modules</arg>
+                                        <arg>javafx.controls,javafx.fxml,javafx.graphics,javafx.media,javafx.swing,javafx.web,javafx.base</arg>
+                                    </vmArgs>
                                 </configuration>
                             </execution>
                         </executions>
